# raylib_vsrg_test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
include/: raygui.h
resources/: 10 Aim Burst.sm  delia.sml
src/: main.cpp  smloader.cpp  smloader.h
src/loaders/: smloader.cpp  smloader.h
src/screens/: difficultyselect.cpp  gameplay.cpp  mainmenu.cpp  menus.h  packselect.cpp  songselect.cpp
